--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,10 +3,8 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-body {
-  background: -webkit-linear-gradient(90deg, #f46b45 10%, #eea849 90%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(90deg, #f46b45 10%, #eea849 90%); /* FF3.6+ */
-  background:     -ms-linear-gradient(90deg, #f46b45 10%, #eea849 90%); /* IE10 */
-  background:      -o-linear-gradient(90deg, #f46b45 10%, #eea849 90%); /* Opera 11.10+ */
-  background:         linear-gradient(90deg, #f46b45 10%, #eea849 90%); /* W3C */
+.alert-notice {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border-color: #faebcc;
 }
